# NewsRadar

./: .gitignore  README.md  index.html
.github/workflows/: collect-and-deploy.yml
assets/: index-1Tv1d-AA.css  index-7RJmSBKz.css  index-BBm5mVPI.css  index-BG4Q8HK1.css  index-BIrbak5V.css  index-BJ-rKQu5.css  index-BJbZOecN.css  index-BNSIcgR3.css  index-BYe1lMvV.css  index-BguD7pP1.js  index-BzPlEHIi.css  index-C0uQXKN_.css  index-C9Ln_hVl.css  index-CCvaDGrl.css  index-CRXdby6Q.css  index-CSyktviX.css  index-CTC6O_g0.css  index-CcjOC7W8.css  index-CiAXA0jM.css  index-D3nHhgr-.css  index-DCZPBQm3.css  index-DMJznDiC.css  index-DMSpQgYq.css  index-DZigKFaR.css  index-D_rfKm5q.css  index-HAA7ELBF.css  index-QG-3KKwx.css  index-R4llPQVm.css  index-ZcwSDrcf.css  index-_A4joltc.css  index-bGxDUxjJ.css  index-eF--zw02.css  index-orNEYB2Y.css
collector/: categorizer.py  main.py  pyproject.toml  summarizer.py
collector/sources/: __init__.py  ai_sources.py  arxiv.py  hackernews.py  rss.py
data/: ai_sources_log.json  news.json
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/public/data/: news.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: NewsCard.tsx
