[project]
name = "newsradar-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "google-genai>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sources"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
